--- a/.tmux.conf
+++ b/.tmux.conf
@@ -110,7 +110,6 @@ bind-key -n M-v run-shell \
      (xclip -out -selection clipboard | tmux load-buffer -); \
      tmux paste-buffer"
 # Unlearn muscle memory for `prefix [` and `prefix ]`.
-# TODO: Make this run sl in a new pane (window?) and then close it.
 bind-key [ run-shell true
 bind-key ] run-shell true
 
@@ -120,12 +119,12 @@ bind-key -n "M-'" set-option status
 # Launch new windows in the same directory as the current pane
 # Also, unhide the status line whenever you create a new window.
 # Rebind to M-i instead of `prefix c`.
-bind-key -n M-i set-option status on \; new-window -c "#{pane_current_path}"
+bind-key -n M-i new-window -c "#{pane_current_path}" \; set-option status on
 bind-key c run-shell true
 
 # Unhide the status line when you break a pane into its own window.
 # Also, rebind this action to M-x instead of `prefix shift 1`.
-bind-key -n M-x set-option status on \; break-pane
+bind-key -n M-x break-pane \; set-option status on
 bind-key ! run-shell true
 
 # Bind page-up to "enter copy mode and go back one page", and then auto-exit
@@ -135,7 +134,8 @@ bind-key -n PageUp copy-mode -eu
 bind-key -n PageDown run-shell true  # Do nothing when in normal mode.
 
 # Toggle fullscreen ("zoom") for the current pane.
-bind-key -n M-z resize-pane -Z
+# Also show the status line.
+bind-key -n M-z resize-pane -Z \; set-option status on
 
 
 
@@ -222,16 +222,29 @@ bind-key Y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
 # Copy mode binds
 # -----------------------------------------------------------------------------
 
-# Use v to select text in vi-style copy mode (spacebar still works too).
-# And rebind rectangle-toggle to C-v (it's bound to v by default).
+# Use v to select text in vi-style copy mode.
+# TODO: make v work as in vim: *toggle* selection instead of begin.
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# Rebind rectangle-toggle.
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+
+# Don't accidentally exit copy mode. Also can use this to cancel selection.
+bind-key -T copy-mode-vi C-c send-keys -X clear-selection
 
 # Scroll 5x faster in copy mode.
 bind-key -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
 bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
 
-# TODO: make { and } copy-mode binds not move the screen around.
+# TODO: try out using incsearch
+bind-key -T copy-mode-vi / command-prompt -p "(search down)" "send -X search-forward \"%%%\""
+bind-key -T copy-mode-vi ? command-prompt -p "(search up)" "send -X search-backward \"%%%\""
+bind-key -T copy-mode-vi C-r command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
+bind-key -T copy-mode-vi C-s command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
+
+# TODO: make / and ? and { and } copy-mode binds not move the screen around.
+
+# TODO: zz zt zb functionality?
 
 # Home and end keys
 bind-key -T copy-mode-vi Home send-keys -X back-to-indentation
@@ -242,8 +255,17 @@ bind-key -T copy-mode-vi Enter \
     send-keys -X copy-pipe-and-cancel \
     "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
 
-# Yank the current line, without the trailing newline.
+# Yank the selection (to the system clipboard), without leaving copy mode.
+# The `refresh-client` is because copy-pipe garbles the text on the screen for
+# some reason.
 bind-key -T copy-mode-vi y \
+    send-keys -X copy-pipe \
+    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -" \; \
+    send-keys -X clear-selection \; \
+    refresh-client
+
+# Yank the current line, without the trailing newline.
+bind-key -T copy-mode-vi d \
     send-keys -X select-line \; \
     send-keys -X copy-pipe-and-cancel "tr -d '\n' | \
     (command -v xclip && xclip -in -selection clipboard || tmux load-buffer -)"
@@ -254,10 +276,3 @@ bind-key -T copy-mode-vi D \
     send-keys -X end-of-line \; \
     send-keys -X copy-pipe-and-cancel "tr -d '\n' | \
     (command -v xclip && xclip -in -selection clipboard || tmux load-buffer -)"
-
-# Yank the selection (to the system clipboard), without leaving copy mode.
-# The `copy-pipe` command is a little buggy for me; it garbles the text on
-# the screen when called. (I also have the same issue with `copy-selection`.)
-bind-key -T copy-mode-vi c \
-    send-keys -X copy-pipe \
-    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
