--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,9 +51,9 @@ set-option -g window-status-bell-style bold
 SHOW_TERMTITLE="#{&&:#{!=:#T,},#{!=:#W,bash}}"
 WINDOW_STATUS_FORMAT="#{?window_bell_flag,!,}#I:#{=16:window_name}#{?$SHOW_TERMTITLE,:#{=16:pane_title},}"
 set-window-option -g window-status-format \
-    " #{?window_zoomed_flag,#[fg=red]z#[default],}$WINDOW_STATUS_FORMAT "
+    " #{?window_zoomed_flag,#[fg=red]z-#[default],}$WINDOW_STATUS_FORMAT "
 set-window-option -g window-status-current-format \
-    " #{?window_zoomed_flag,#[bg=red]z#[default],}$WINDOW_STATUS_FORMAT "
+    " #{?window_zoomed_flag,#[bg=red]z-#[default],}$WINDOW_STATUS_FORMAT "
 
 # There's whitespace in the above strings, so we can remove it from these ones.
 # (I moved the spaces into the above settings so that the background-highlight
@@ -77,8 +77,8 @@ set-option -g status-right ' %l:%M%P '
 # There are no else statements, so the above is the "else" block to this "if".
 # (Both run, but these later settings overwrite the previous ones.)
 %if #{||:#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}},#{m:*-dt,#{host}}}
-    # Status bar initially hidden.
-    set-option -g status off
+    # Status bar initially shown.
+    set-option -g status on
 
     # Dark grey.
     set-option -g status-style fg=brightblack,bg=brightgreen
@@ -102,6 +102,9 @@ bind-key M-a send-prefix
 
 # Open a tmux command prompt with M-s. Default keybind is `prefix :`
 bind-key -n M-s command-prompt
+
+# Redraw the screen, in case something goes wonky.
+bind-key -n M-r refresh-client
 
 # Copy / paste. (Paste from the system clipboard!)
 bind-key -n M-c copy-mode
@@ -137,6 +140,10 @@ bind-key -n PageDown run-shell true  # Do nothing when in normal mode.
 # Also show the status line.
 bind-key -n M-z resize-pane -Z \; set-option status on
 
+# Change pane layouts.
+bind-key -n M-Home select-layout even-vertical
+bind-key -n M-End select-layout even-horizontal
+
 
 
 # Switch panes.
@@ -146,10 +153,10 @@ bind-key -n M-k select-pane -U
 bind-key -n M-l select-pane -R
 
 # Resize panes.
-bind-key -n M-H resize-pane -L 5
-bind-key -n M-J resize-pane -D 5
 bind-key -n M-K resize-pane -U 5
-bind-key -n M-L resize-pane -R 5
+bind-key -n M-J resize-pane -D 5
+bind-key -n M-H resize-pane -L 10
+bind-key -n M-L resize-pane -R 10
 
 # Split current pane.
 bind-key h split-window -c "#{pane_current_path}" -h \; swap-pane -U
@@ -179,7 +186,6 @@ bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
-bind-key -n M-0 select-window -t 10
 
 # Move current pane to target window.
 bind-key -n M-! join-pane -t :1
@@ -191,24 +197,19 @@ bind-key -n M-^ join-pane -t :6
 bind-key -n M-& join-pane -t :7
 bind-key -n M-* join-pane -t :8
 bind-key -n M-( join-pane -t :9
-bind-key -n M-) join-pane -t :10
-
-# Rename current window.
-bind-key 1 move-window -t 1
-bind-key 2 move-window -t 2
-bind-key 3 move-window -t 3
-bind-key 4 move-window -t 4
-bind-key 5 move-window -t 5
-bind-key 6 move-window -t 6
-bind-key 7 move-window -t 7
-bind-key 8 move-window -t 8
-bind-key 9 move-window -t 9
-bind-key 0 move-window -t 10
 
 
 
-# Move the current window to a different session.
-bind-key -n M-m command-prompt -p 'Session to move window to:' 'move-window -t %%:'
+# Re-number ("move") current window within this session.
+bind-key -n M-. command-prompt -1 -p 'Renumber window to:' 'move-window -t %%'
+
+# Move current pane to another session.
+bind-key -n M-m command-prompt -p 'Move pane to session:' 'join-pane -t %%:'
+
+# Move current window to another session.
+bind-key -n M-/ command-prompt -p 'Move window to session:' 'move-window -t %%:'
+
+
 
 # Save the current pane's history to a file, including color escape sequences.
 bind-key y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
