--- a/.tmux.conf
+++ b/.tmux.conf
@@ -233,6 +233,9 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Don't accidentally exit copy mode. Also can use this to cancel selection.
 bind-key -T copy-mode-vi C-c send-keys -X clear-selection
 
+# Do exit copy mode when escape is pressed.
+bind-key -T copy-mode-vi Escape send-keys -X cancel
+
 # Scroll 5x faster in copy mode.
 bind-key -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
 bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
