--- a/.tmux.conf
+++ b/.tmux.conf
@@ -223,8 +223,7 @@ bind-key Y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
 # Copy mode binds
 # -----------------------------------------------------------------------------
 
-# Use v to select text in vi-style copy mode.
-# TODO: make v work as in vim: *toggle* selection instead of begin.
+# Use v to select text, vi-style.
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # Rebind rectangle-toggle.
@@ -240,15 +239,9 @@ bind-key -T copy-mode-vi Escape send-keys -X cancel
 bind-key -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
 bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
 
-# TODO: try out using incsearch
-bind-key -T copy-mode-vi / command-prompt -p "(search down)" "send -X search-forward \"%%%\""
-bind-key -T copy-mode-vi ? command-prompt -p "(search up)" "send -X search-backward \"%%%\""
+# i-search!
 bind-key -T copy-mode-vi C-r command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
 bind-key -T copy-mode-vi C-s command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
-
-# TODO: make / and ? and { and } copy-mode binds not move the screen around.
-
-# TODO: zz zt zb functionality?
 
 # Home and end keys
 bind-key -T copy-mode-vi Home send-keys -X back-to-indentation
