--- a/.config/git/config
+++ b/.config/git/config
@@ -7,6 +7,7 @@
     f = !gitrecurse git fetch
     l = !gitrecurse git --no-pager log --oneline -n 10
     d = diff
+    ds = diff --staged
     h = show
     a = add
     aa = add --all :/
