--- a/.tmux.conf
+++ b/.tmux.conf
@@ -108,6 +108,7 @@ bind-key -n M-r refresh-client
 
 # Copy / paste. (Paste from the system clipboard!)
 bind-key -n M-c copy-mode
+bind-key M-c send-keys M-c
 bind-key -n M-v run-shell \
     "command -v xclip > /dev/null && \
      (xclip -out -selection clipboard | tmux load-buffer -); \
