Fix tmux/ssh/nvim compatibility option

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,19 @@
 # -----------------------------------------------------------------------------
-# Compatibility settings
+# Options
 # -----------------------------------------------------------------------------
 
-# When TERM is set to xterm-256color outisde tmux, assume support for true
-# (24-bit) color.
-set-option -ga terminal-overrides xterm-256color:Tc
+# When TERM is set to xterm-256color (or similar) outisde tmux, assume support
+# for true (24-bit) color.
+set -ga terminal-overrides *-256color:Tc
+
+# Correctly set TERM inside tmux.
+if "test $TERM = xterm-256color" \
+    'set -g default-terminal screen-256color'
 
 # Send escape key (almost) right away when pressed (5 ms).
 # Default is half of a second, which feels way less responsive.
 # When this was set to 0, I occasionally had issues.
-set-option -g escape-time 5
-
-# -----------------------------------------------------------------------------
-# Options
-# -----------------------------------------------------------------------------
+set -g escape-time 5
 
 # Use emacs-style keybindings in command-line mode.
 set-option -g status-keys emacs
