Add a tmux keybind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -233,7 +233,7 @@ bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Don't accidentally exit copy mode. Also can use this to cancel selection.
 bind -T copy-mode-vi C-c send-keys -X clear-selection
 
-# Do exit copy mode when escape is pressed.
+# Do exit copy mode when escape is pressed (other keybind for this is `q`).
 bind -T copy-mode-vi Escape send-keys -X cancel
 
 # Scroll 5x faster in copy mode.
@@ -250,6 +250,11 @@ bind -T copy-mode-vi End send-keys -X end-of-line
 
 # Yank to the system clipboard by default (if xclip is installed).
 bind -T copy-mode-vi Enter \
+    send-keys -X copy-pipe-and-cancel \
+    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
+
+# Also yank the selection using the `x` key, since enter is a little far.
+bind -T copy-mode-vi x \
     send-keys -X copy-pipe-and-cancel \
     "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
 
