Fix tabs vs spaces in .config/git/config

--- a/.config/git/config
+++ b/.config/git/config
@@ -31,22 +31,22 @@
 
 # diff-so-fancy
 [core]
-	pager = diff-so-fancy | less --tabs=4
+    pager = diff-so-fancy | less --tabs=4
 [color]
-	ui = true
+    ui = true
 [color "diff-highlight"]
-	oldNormal = red bold
-	oldHighlight = red bold 52
-	newNormal = green bold
-	newHighlight = green bold 22
+    oldNormal = red bold
+    oldHighlight = red bold 52
+    newNormal = green bold
+    newHighlight = green bold 22
 
-	# For light terminal backgrounds.
-	oldHighlight = red bold 224
-	newHighlight  = green bold 194
+    # For light terminal backgrounds.
+    #oldHighlight = red bold 224
+    #newHighlight  = green bold 194
 [color "diff"]
-	meta = yellow
-	frag = magenta bold
-	commit = yellow bold
-	old = red bold
-	new = green bold
-	whitespace = red reverse
+    meta = yellow
+    frag = magenta bold
+    commit = yellow bold
+    old = red bold
+    new = green bold
+    whitespace = red reverse
