--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,11 +64,11 @@ set -g status-left "[#S]"
 # 12-hour clock in the status bar.
 set -g status-right ' %l:%M%P '
 
+# Status bar initially shown.
+set -g status on
+
 # Different color theme on different machines.
 %if 1  # Unknown machine; most likely a remote connection.
-    # Status bar initially shown.
-    set -g status on
-
     # Cyan!
     set -g status-style fg=brightblack,bg=cyan
     set -g pane-active-border-style fg=cyan
@@ -77,9 +77,6 @@ set -g status-right ' %l:%M%P '
 # There are no else statements, so the above is the "else" block to this "if".
 # (Both run, but these later settings overwrite the previous ones.)
 %if #{||:#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}},#{m:*-dt,#{host}}}
-    # Status bar initially shown.
-    set -g status on
-
     # Dark grey.
     set -g status-style fg=brightblack,bg=brightgreen
     set -g pane-active-border-style fg=brightgreen
@@ -96,9 +93,9 @@ set -g status-right ' %l:%M%P '
 # -----------------------------------------------------------------------------
 
 # Change prefix key to M-a
-unbind C-b
 set -g prefix M-a
 bind M-a send-prefix
+unbind C-b
 
 # Open a tmux command prompt with M-s. Default keybind is `prefix :`
 bind -n M-s command-prompt
@@ -113,9 +110,8 @@ bind -n M-v run \
     "command -v xclip > /dev/null && \
      (xclip -out -selection clipboard | tmux load-buffer -); \
      tmux paste-buffer"
-# Unlearn muscle memory for `prefix [` and `prefix ]`.
-bind [ run true
-bind ] run true
+unbind [
+unbind ]
 
 # Toggle the status bar.
 bind -n "M-'" set status
@@ -124,12 +120,12 @@ bind -n "M-'" set status
 # Also, unhide the status line whenever you create a new window.
 # Rebind to M-i instead of `prefix c`.
 bind -n M-i new-window -c "#{pane_current_path}" \; set status on
-bind c run true
+unbind c
 
 # Unhide the status line when you break a pane into its own window.
 # Also, rebind this action to M-x instead of `prefix shift 1`.
 bind -n M-x break-pane \; set status on
-bind ! run true
+unbind !
 
 # Bind page-up to "enter copy mode and go back one page", and then auto-exit
 # copy-mode upon paging to the bottom. Basically, make page-up/page-down behave
@@ -142,8 +138,8 @@ bind -n PageDown run true  # Do nothing when in normal mode.
 bind -n M-z resize-pane -Z \; set status on
 
 # Change pane layouts.
-bind -n M-Home select-layout even-vertical
-bind -n M-End select-layout even-horizontal
+bind -n M-Home select-layout even-horizontal
+bind -n M-End select-layout even-vertical
 
 
 
@@ -201,7 +197,7 @@ bind -n M-( join-pane -t :9
 
 
 
-# Re-number ("move") current window within this session.
+# Re-number (aka "move") current window within this session.
 bind -n M-. command-prompt -1 -p 'Renumber window to:' 'move-window -t %%'
 
 # Move current pane to another session.
@@ -233,7 +229,7 @@ bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Don't accidentally exit copy mode. Also can use this to cancel selection.
 bind -T copy-mode-vi C-c send-keys -X clear-selection
 
-# Do exit copy mode when escape is pressed (other keybind for this is `q`).
+# Do exit copy mode when escape is pressed (the other keybind for this is `q`).
 bind -T copy-mode-vi Escape send-keys -X cancel
 
 # Scroll 5x faster in copy mode.
@@ -244,9 +240,11 @@ bind -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
 bind -T copy-mode-vi C-r command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
 bind -T copy-mode-vi C-s command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
 
-# Home and end keys
+# Home and end keys.
 bind -T copy-mode-vi Home send-keys -X back-to-indentation
 bind -T copy-mode-vi End send-keys -X end-of-line
+
+
 
 # Yank to the system clipboard by default (if xclip is installed).
 bind -T copy-mode-vi Enter \
