--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,10 @@ if "test $TERM = xterm-256color" \
 # When this was set to 0, I occasionally had issues.
 set -g escape-time 5
 
+# Let nvim (and possibly other programs) know when focus is gained/lost.
+# In nvim, this corresponds to a FocusGained/FocusLost event.
+set -g focus-events on
+
 # Use emacs-style keybindings in command-line mode.
 set -g status-keys emacs
 
