--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,15 +68,15 @@ set -g status-left "[#S]"
 # 12-hour clock in the status bar.
 set -g status-right ' %l:%M%P '
 
-# Status bar initially shown.
-set -g status on
-
 # Different color theme on different machines.
 %if 1  # Unknown machine; most likely a remote connection.
     # Cyan!
     set -g status-style fg=brightblack,bg=cyan
     set -g pane-active-border-style fg=cyan
     set -g pane-border-style fg=default
+
+    # Status bar initially shown.
+    set -g status on
 %endif
 # There are no else statements, so the above is the "else" block to this "if".
 # (Both run, but these later settings overwrite the previous ones.)
@@ -90,6 +90,9 @@ set -g status on
     #set -g status-style fg=brightgreen,bg=white
     #set -g pane-active-border-style fg=brightcyan
     #set -g pane-border-style fg=white
+
+    # Status bar initially hidden.
+    set -g status off
 %endif
 
 # -----------------------------------------------------------------------------
@@ -138,8 +141,7 @@ bind -n PageUp copy-mode -eu
 bind -n PageDown run true  # Do nothing when in normal mode.
 
 # Toggle fullscreen ("zoom") for the current pane.
-# Also show the status line.
-bind -n M-z resize-pane -Z \; set status on
+bind -n M-z resize-pane -Z
 
 # Change pane layouts.
 bind -n M-Home select-layout even-horizontal
