--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,11 +4,11 @@ set $Win Mod4
 set $Alt Mod1
 
 # Applications.
-bindsym $Win+i exec "exo-open --launch TerminalEmulator --execute tmux_attach"
-bindsym $Win+o exec "exo-open --launch WebBrowser"
+bindsym $Win+i exec "xfce4-terminal --execute tmux_attach"
+bindsym $Win+o exec chromium
 bindsym $Win+p exec --no-startup-id xfce4-popup-whiskermenu
 bindsym $Win+u exec firefox
-bindsym $Win+y exec "exo-open --launch TerminalEmulator --execute tmux_nvim"
+bindsym $Win+y exec "xfce4-terminal --execute tmux_nvim"
 bindsym $Win+m exec "emacsclient -a '' -c"
 bindsym $Win+n exec "exo-open --launch FileManager"
 
