--- a/.tmux.conf
+++ b/.tmux.conf
@@ -177,7 +177,7 @@ bind M-l swap-pane -d -t {right-of}
 
 # Switch windows
 bind -n M-, previous-window
-bind -n 'M-\;' next-window
+bind -n 'M-;' next-window
 
 # Select window by number.
 bind -n M-1 select-window -t 1
