--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,7 +5,7 @@ set $Alt Mod1
 
 # Applications.
 bindsym $Win+i exec "xfce4-terminal --execute tmux_attach"
-bindsym $Win+o exec chromium
+bindsym $Win+o exec google-chrome
 bindsym $Win+p exec --no-startup-id xfce4-popup-whiskermenu
 bindsym $Win+u exec firefox
 bindsym $Win+y exec "xfce4-terminal --execute tmux_nvim"
