Move to a true-color solarized
It looks the same, but now I can have my system colors not be clobbered
by shades of grey. E.g., now programs trying to output a bright blue
actually display blue, instead of a medium grey.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,11 +53,11 @@ set -g window-status-bell-style bold
 # Titles can sometimes be things like the currently open file in vim (if
 # properly configured) or the remote server in ssh.
 SHOW_TERMTITLE="#{&&:#{!=:#T,},#{!=:#W,bash}}"
-WINDOW_STATUS_FORMAT="#{?window_bell_flag,!,}#I:#{=16:window_name}#{?$SHOW_TERMTITLE,:#{=16:pane_title},}"
-set -g window-status-format \
-    " #{?window_zoomed_flag,#[fg=red]z-#[default],}$WINDOW_STATUS_FORMAT "
+WINDOW_STATUS_FORMAT="#I:#{=16:window_name}#{?$SHOW_TERMTITLE,:#{=16:pane_title},}#{?window_bell_flag,!,}"
 set -g window-status-current-format \
-    " #{?window_zoomed_flag,#[bg=red]z-#[default],}$WINDOW_STATUS_FORMAT "
+    " $WINDOW_STATUS_FORMAT#{?window_zoomed_flag, #[bg=red]z,} "
+set -g window-status-format \
+    " $WINDOW_STATUS_FORMAT "
 
 # There's whitespace in the above strings, so we can remove it from these ones.
 # (I moved the spaces into the above settings so that the background-highlight
@@ -81,14 +81,14 @@ set -g status-right ' %l:%M%P '
 # There are no else statements, so the above is the "else" block to this "if".
 # (Both run, but these later settings overwrite the previous ones.)
 %if #{||:#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}},#{m:*-dt,#{host}}}
-    # Dark grey.
-    set -g status-style fg=brightblack,bg=brightgreen
-    set -g pane-active-border-style fg=brightgreen
+    # Dark background.
+    set -g status-style fg=brightblack,bg="#586E75"
+    set -g pane-active-border-style fg="#586E75"
     set -g pane-border-style fg=black
 
-    # Light grey, for light terminal backgrounds.
-    #set -g status-style fg=brightgreen,bg=white
-    #set -g pane-active-border-style fg=brightcyan
+    # Light background.
+    #set -g status-style fg="#586E75",bg=white
+    #set -g pane-active-border-style fg="#93A1A1"
     #set -g pane-border-style fg=white
 
     # Status bar initially hidden.
