--- a/.ripgreprc
+++ b/.ripgreprc
@@ -2,10 +2,14 @@
 # distinguishable from my prompt when I'm scrolling back through the output.
 --colors=path:fg:13
 
+# Ignore case by default. Use `-s` to search case-sensitive.
+--ignore-case
+
 # Search hidden files and directories by default.
 --hidden
 
-# Sort output by file path. Slows down searching.
+# Sort output by file path. Slows down searching, but easier to find what
+# you're looking for in the output.
 --sort=path
 
 # Ignore ctags tagfiles, .git directories, etc.
