Fix tmux swap-panes for 3.0
And trivial edits to comments.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,10 +10,10 @@ set -ga terminal-overrides *-256color:Tc
 if "test $TERM = xterm-256color" \
     'set -g default-terminal screen-256color'
 
-# Send escape key (almost) right away when pressed (5 ms).
+# Send escape key (almost) right away when pressed (1 ms).
 # Default is half of a second, which feels way less responsive.
 # When this was set to 0, I occasionally had issues.
-set -g escape-time 5
+set -g escape-time 1
 
 # Let nvim (and possibly other programs) know when focus is gained/lost.
 # In nvim, this corresponds to a FocusGained/FocusLost event.
@@ -110,7 +110,7 @@ bind -n M-s command-prompt
 # Redraw the screen, in case something goes wonky.
 bind -n M-r refresh-client
 
-# Copy / paste. (Paste from the system clipboard!)
+# Copy / paste. (Pastes from the system clipboard!)
 bind -n M-c copy-mode
 bind M-c send-keys M-c
 bind -n M-v run \
@@ -138,7 +138,7 @@ unbind !
 # copy-mode upon paging to the bottom. Basically, make page-up/page-down behave
 # as expected.
 bind -n PageUp copy-mode -eu
-bind -n PageDown run true  # Do nothing when in normal mode.
+bind -n PageDown run true  # page-down does nothing when in normal mode.
 
 # Toggle fullscreen ("zoom") for the current pane.
 bind -n M-z resize-pane -Z
@@ -167,11 +167,11 @@ bind j split-window -c "#{pane_current_path}"
 bind k split-window -c "#{pane_current_path}" \; swap-pane -U
 bind l split-window -c "#{pane_current_path}" -h
 
-# Swap two ajacent panes.
-bind M-h swap-pane -d -t {left-of}
-bind M-j swap-pane -d -t {down-of}
-bind M-k swap-pane -d -t {up-of}
-bind M-l swap-pane -d -t {right-of}
+# Swap two ajacent panes. (The syntax for this changed in tmux 3.0)
+bind M-h swap-pane -d -t {left}
+bind M-j swap-pane -d -t {down}
+bind M-k swap-pane -d -t {up}
+bind M-l swap-pane -d -t {right}
 
 
 
@@ -205,6 +205,7 @@ bind -n M-( join-pane -t :9
 
 # Re-number (aka "move") current window within this session.
 bind -n M-. command-prompt -1 -p 'Renumber window to:' 'move-window -t %%'
+unbind .
 
 # Move current pane to another session.
 bind -n M-m command-prompt -p 'Move pane to session:' 'join-pane -t %%:'
@@ -232,7 +233,8 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 # Rebind rectangle-toggle.
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
-# Don't accidentally exit copy mode. Also can use this to cancel selection.
+# Don't accidentally exit copy mode with C-c.
+# Also can use this to cancel selection.
 bind -T copy-mode-vi C-c send-keys -X clear-selection
 
 # Do exit copy mode when escape is pressed (the other keybind for this is `q`).
