--- a/.ripgreprc
+++ b/.ripgreprc
@@ -2,19 +2,19 @@
 # distinguishable from my prompt when I'm scrolling back through the output.
 --colors=path:fg:13
 
+# Sort output by file path. Slows down searching, but easier to find what
+# you're looking for in the output.
+--sort=path
+
 # Ignore case by default. Use `-s` to search case-sensitive.
 --ignore-case
 
 # Search hidden files and directories by default.
 --hidden
 
-# Sort output by file path. Slows down searching, but easier to find what
-# you're looking for in the output.
---sort=path
-
-# Ignore ctags tagfiles, .git directories, etc.
---glob=!tags
+# Ignore .git directories, ctags tagfiles, etc.
 --glob=!.git
 --glob=!.svn
 --glob=!.hg
+--glob=!tags
 --glob=!node_modules
